# OCamlPractice

./: README.md  dune-project
Owl/: dune  main.ml
ProblemSets/Synchronous/Fibonacci/: dune  main.ml
ProblemSets/Synchronous/HigherOrderFunctions/: main.ml
ProblemSets/Synchronous/PrintEven/: main.ml
test/: dune
